fix: Resize footer on mobile

--- a/public/css/footer.css
+++ b/public/css/footer.css
@@ -16,3 +16,9 @@
     font-size: 0.6em;
     text-align: left;
 }
+
+@media only screen and (max-width: 550px){
+    #copyright {
+        font-size: 1em;
+    }
+}
